# aliyun-openapi-cpp-sdk

./: .gitignore  .travis.yaml  .travis.yml  CHANGELOG  CMakeLists.txt  README-CN.md  README.md  README_zh.md  VERSION  build_sdk.sh  cpp.php  easyinstall.sh  function_test.sh  test-coverage.sh  unit_test.sh
accountlabel/: CMakeLists.txt
accountlabel/src/: AccountLabelClient.cc
accountlabel/src/model/: AddCustomerLabelRequest.cc  AddCustomerLabelResult.cc  BatchFetchAccountLabelRequest.cc  BatchFetchAccountLabelResult.cc  DeleteCustomerLabelRequest.cc  DeleteCustomerLabelResult.cc  QueryCustomerLabelByConfigGroupRequest.cc  QueryCustomerLabelByConfigGroupResult.cc  QueryCustomerLabelRequest.cc  QueryCustomerLabelResult.cc
acm/: CMakeLists.txt
acm/src/: AcmClient.cc
acm/src/model/: CreateConfigurationRequest.cc  CreateConfigurationResult.cc  CreateNamespaceRequest.cc  CreateNamespaceResult.cc  DeleteConfigurationRequest.cc  DeleteConfigurationResult.cc  DeleteNamespaceRequest.cc  DeleteNamespaceResult.cc  DeployConfigurationRequest.cc  DeployConfigurationResult.cc  DescribeConfigurationRequest.cc  DescribeConfigurationResult.cc  DescribeNamespaceRequest.cc  DescribeNamespaceResult.cc  DescribeNamespacesRequest.cc  DescribeNamespacesResult.cc  UpdateNamespaceRequest.cc  UpdateNamespaceResult.cc
acms-open/: CMakeLists.txt
acms-open/src/: Acms-openClient.cc
acms-open/src/model/: CreateConfigurationRequest.cc  CreateConfigurationResult.cc  CreateNamespaceRequest.cc  CreateNamespaceResult.cc  DeleteConfigurationRequest.cc  DeleteConfigurationResult.cc  DeleteNamespaceRequest.cc  DeleteNamespaceResult.cc  DeployConfigurationRequest.cc  DeployConfigurationResult.cc  DescribeConfigurationRequest.cc  DescribeConfigurationResult.cc  DescribeNamespaceRequest.cc  DescribeNamespaceResult.cc  UpdateNamespaceRequest.cc  UpdateNamespaceResult.cc
actiontrail/: CMakeLists.txt
actiontrail/src/: ActiontrailClient.cc
actiontrail/src/model/: CreateDeliveryHistoryJobRequest.cc  CreateDeliveryHistoryJobResult.cc  CreateTrailRequest.cc  CreateTrailResult.cc  DeleteDeliveryHistoryJobRequest.cc  DeleteDeliveryHistoryJobResult.cc  DeleteTrailRequest.cc  DeleteTrailResult.cc  DescribeRegionsRequest.cc  DescribeRegionsResult.cc  DescribeTrailsRequest.cc  DescribeTrailsResult.cc  GetAccessKeyLastUsedEventsRequest.cc  GetAccessKeyLastUsedEventsResult.cc  GetAccessKeyLastUsedInfoRequest.cc  GetAccessKeyLastUsedInfoResult.cc  GetAccessKeyLastUsedIpsRequest.cc  GetAccessKeyLastUsedIpsResult.cc  GetAccessKeyLastUsedProductsRequest.cc  GetAccessKeyLastUsedProductsResult.cc  GetAccessKeyLastUsedResourcesRequest.cc  GetAccessKeyLastUsedResourcesResult.cc  GetDeliveryHistoryJobRequest.cc  GetDeliveryHistoryJobResult.cc  GetTrailStatusRequest.cc  GetTrailStatusResult.cc  ListDeliveryHistoryJobsRequest.cc  ListDeliveryHistoryJobsResult.cc  LookupEventsRequest.cc  LookupEventsResult.cc  StartLoggingRequest.cc  StartLoggingResult.cc  StopLoggingRequest.cc  StopLoggingResult.cc  UpdateTrailRequest.cc  UpdateTrailResult.cc
adb/: CMakeLists.txt
adb/src/: AdbClient.cc
adb/src/model/: AllocateClusterPublicConnectionRequest.cc  AllocateClusterPublicConnectionResult.cc  ApplyAdviceByIdRequest.cc  ApplyAdviceByIdResult.cc  AttachUserENIRequest.cc  AttachUserENIResult.cc  BatchApplyAdviceByIdListRequest.cc  BatchApplyAdviceByIdListResult.cc  BindAccountRequest.cc  BindAccountResult.cc  BindDBResourceGroupWithUserRequest.cc  BindDBResourceGroupWithUserResult.cc  BindDBResourcePoolWithUserRequest.cc  BindDBResourcePoolWithUserResult.cc  CheckBindRamUserRequest.cc  (+305 more)
adcp/: CMakeLists.txt
adcp/src/: AdcpClient.cc
address-purification/: CMakeLists.txt
address-purification/src/: Address-purificationClient.cc
aegis/: CMakeLists.txt
aegis/src/: AegisClient.cc
afs/: CMakeLists.txt  ChangeLog.txt
afs/src/: AfsClient.cc
aicontent/: CMakeLists.txt
aicontent/src/: AiContentClient.cc
aigen/: CMakeLists.txt
aigen/src/: AigenClient.cc
aimath/: CMakeLists.txt
aimath/src/: AIMathClient.cc
aimiaobi/: CMakeLists.txt
aimiaobi/src/: AiMiaoBiClient.cc
aipodcast/: CMakeLists.txt
aipodcast/src/: AIPodcastClient.cc
airec/: CMakeLists.txt
airec/src/: AirecClient.cc
alb/: CMakeLists.txt
alb/src/: AlbClient.cc
alidns/: CMakeLists.txt
alidns/src/: AlidnsClient.cc
alikafka/: CMakeLists.txt  version-2019-09-16.xml
alikafka/2019-09-16/: CheckInstanceQuota.xml  ConvertPostPayOrder.xml  CreateAcl.xml  CreateConnectorTask.xml  CreateConsumerGroup.xml  CreatePostPayOrder.xml  CreatePrePayOrder.xml  CreateSaslUser.xml  CreateTopic.xml  DeleteAcl.xml  DeleteConnectorTask.xml  DeleteConsumerGroup.xml  DeleteInstance.xml  DeleteSaslUser.xml  DeleteTopic.xml  DeployConnectorTask.xml  DescribeAcls.xml  DescribeNodeStatus.xml  DescribeSaslUsers.xml  GenerateConnectorTaskSystemResource.xml  GetAllInstanceIdList.xml  GetAllowedIpList.xml  GetConsumerList.xml  GetConsumerProgress.xml  GetInstanceList.xml  GetMetaProductList.xml  GetTopicList.xml  GetTopicStatus.xml  ListConnectorTask.xml  ListTagResources.xml  ModifyInstanceName.xml  ModifyPartitionNum.xml  ModifyTopicRemark.xml  ReleaseInstance.xml  SendMigrationHeartbeat.xml  StartInstance.xml  TagResources.xml  UntagResources.xml  UpdateAllowedIp.xml  UpdateConnectorTaskRemark.xml  (+4 more)
alikafka/src/: AlikafkaClient.cc
alinlp/: CMakeLists.txt
alinlp/src/: AlinlpClient.cc
aliyuncvc/: CMakeLists.txt
aliyuncvc/src/: AliyuncvcClient.cc
amptest/: CMakeLists.txt
amptest/src/: AmpTestClient.cc
amqp-open/: CMakeLists.txt
amqp-open/src/: Amqp-openClient.cc
antiddos-public/: CMakeLists.txt
antiddos-public/src/: Antiddos-publicClient.cc
anytrans/: CMakeLists.txt
anytrans/src/: AnyTransClient.cc
apds/: CMakeLists.txt
apds/src/: ApdsClient.cc
appmallsservice/: CMakeLists.txt
appmallsservice/src/: AppMallsServiceClient.cc
appstream-center/: CMakeLists.txt
appstream-center/src/: Appstream-centerClient.cc
arms/: CMakeLists.txt
arms/src/: ARMSClient.cc
arms4finance/: CMakeLists.txt
arms4finance/src/: ARMS4FINANCEClient.cc
(+81277 files in other folders)
